--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 60vh; /* Ekran boyutuna göre yüksekliği ayarlar */
+    height: 70vh; /* Ekran boyutuna göre yüksekliği ayarlar */
     display: flex;
     align-items: center; /* Dikey ortalama */
     justify-content: flex-start; /* Sola hizalama */
@@ -456,33 +456,49 @@ body {
     margin-bottom: 15px;
   }
   
+/* Genel Tasarım */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
-
-
-
-  
-  /* Genel Ayarlar */
 .featurette-heading {
-    font-size: 2rem; /* Varsayılan başlık boyutu */
-    
-  }
+  font-size: 2.2rem;
+  color: #1a480e;
+  margin-bottom: 20px;
+}
+
+.lead {
+  font-size: 1rem;
+  line-height: 1.8;
+  color: #555;
+}
+
+/* Video Alanı */
+.video-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; /* Varsayılan 16:9 oranı */
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.5s ease-in-out;
+}
+
+.video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 15px;
+}
 
 
-  .featurette-heading .text-primary {
-    color: #38381e !important; /* Yeşil renk */
-  }
 
-  .featurette .lead {
-    color: #555; /* Daha okunaklı açık gri yazı rengi */
-  }
-  
-  /* Görsel Ayarları */
-  .featurette-image {
-    border-radius: 10px; /* Köşeleri yuvarlat */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Hafif gölge efekti */
-    max-height: 500px; /* Maksimum yükseklik */
-    object-fit: cover; /* Görselin düzgün görünmesini sağlar */
-  }
+
   
   /* Mobil Uyum */
   @media (max-width: 768px) {
